--- a/firebase.json
+++ b/firebase.json
@@ -52,7 +52,7 @@
     {
       "source": "functions",
       "codebase": "default",
-      "predeploy": ["npm --prefix \"$RESOURCE_DIR\" run lint"],
+      "predeploy": [],
       "ignore": [
         "node_modules",
         ".git",
@@ -63,7 +63,7 @@
     }
   ],
   "hosting": {
-    "public": "public",
+    "public": "dist",
     "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
     "rewrites": [
       {
