--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@firebasegen/default-connector": "link:dataconnect-generated/js/default-connector",
+    "@heroicons/react": "v1",
     "@tailwindcss/vite": "^4.0.9",
     "classnames": "^2.5.1",
     "firebase": "^11.3.1",
